--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <title></title>
   </head>
   <body>
-    ;{
-      &
-    }
-    <h1>Hola</h1>
+    <h1>github funcionando uwu</h1>
   </body>
 </html>
