inicio de esquema para estudio asi como estructura de informacion basica o guia de estudio

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title></title>
   </head>
   <body>
-    <h1>github funcionando uwu</h1>
+    <h1>Front End web devolopment</h1>
+    <ol>
+    <a href="whatIsHtml.html"><li>Html basics</li></a>  
+    </ol>
   </body>
 </html>
