--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <body>
     <h1>Front End web devolopment</h1>
     <ol>
-    <a href="HTMLBasics/whatIsHtml.html"><li>Html basics</li></a>  
+    <a href="HTMLBasics/whatIsHtml.html"><li>Html basics</li></a>
+    <a href="HTMLBasics/htmlHistory.html"><li>Html basics</li></a>
     </ol>
   </body>
 </html>
