--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <body>
     <h1>Front End web devolopment</h1>
     <ol>
-    <a href="HTMLBasics/whatIsHtml.html"><li>Html basics</li></a>
-    <a href="HTMLBasics/htmlHistory.html"><li>Html basics</li></a>
-    </ol>
+    <li>
+      <h3>HTML basics</h3>
+      <a href="HTMLBasics/whatIsHtml.html"><li>Html basics</li></a>
+      <a href="HTMLBasics/htmlHistory.html"><li>Html basics</li></a>
+    </li>
+  </ol>
   </body>
 </html>
