--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <li>
       <h3>HTML basics</h3>
       <a href="HTMLBasics/whatIsHtml.html"><li>Html basics</li></a>
-      <a href="HTMLBasics/htmlHistory.html"><li>Html basics</li></a>
+      <a href="HTMLBasics/htmlHistory.html"><li>Html history</li></a>
     </li>
   </ol>
   </body>
