--- a/HTMLBasics/htmlHistory.html
+++ b/HTMLBasics/htmlHistory.html
@@ -1,20 +1,96 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>What is html?</h1>
-    <table>
-      <thead>
-        <tr>
-          Year
-        </tr>
-        <tr>
-          Version
-        </tr>
-      </thead>
-        </table>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+
+<body>
+  <h1>What is html?</h1>
+  <table>
+    <tr>
+      <th>Year</th>
+      <th> </th>
+      <th>Version</th>
+    </tr>
+    <tr>
+      <td>1989</td>
+      <td> </td>
+      <td>Tim Berners-Lee invented www</td>
+    </tr>
+
+    <tr>
+      <td>1991</td>
+      <td> </td>
+      <td>Tim Berners-Lee invented HTML</td>
+    </tr>
+
+    <tr>
+      <td>1993</td>
+      <td> </td>
+      <td>David Raggett drafted HTML+</td>
+    </tr>
+
+    <tr>
+      <td>1995</td>
+      <td></td>
+      <td>HTML Working Group defined HTML 2.0</td>
+    </tr>
+
+    <tr>
+      <td>1997</td>
+      <td></td>
+      <td>W3CRecomendation:HTML 3.2</td>
+    </tr>
+    <tr>
+      <td>1999</td>
+      <td></td>
+      <td>W3CRecomendation:HTML 4.01</td>
+    </tr>
+
+    <tr>
+      <td>2000</td>
+      <td></td>
+      <td>W3CRecomendation:XHTML 1.0</td>
+    </tr>
+
+    <tr>
+      <td>2008</td>
+      <td> </td>
+      <td>WHATWG HTML5 First Public Draft</td>
+    </tr>
+
+    <tr>
+      <td>2012</td>
+      <td> </td>
+      <td>WHATWG HTML5 Living Standard</td>
+    </tr>
+
+    <tr>
+      <td>2014</td>
+      <td> </td>
+      <td>W3CRecomendation:HTML5</td>
+    </tr>
+
+    <tr>
+      <td>2016</td>
+      <td> </td>
+      <td>W3CRecomendation:HTML 5.1</td>
+    </tr>
+
+    <tr>
+      <td>2017</td>
+      <td> </td>
+      <td>W3CRecomendation:HTML5.1 2nd Edition</td>
+    </tr>
+
+    <tr>
+      <td>2017</td>
+      <td> </td>
+      <td>W3CRecomendation:HTML5.2</td>
+    </tr>
+  </table>
+</body>
+
 </html>
