--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
       <ol>
         <a href="HTMLBasics/whatIsHtml.html"><li>Html basics</li></a>
         <a href="HTMLBasics/htmlHistory.html"><li>Html history</li></a>
+        <a href="HTMLBasics/basicHtml.html"><li>Basic html tags</li></a>
       </ol>
+    </li>
+    <li>
+      <a href="HTMLFirstProyect">  <h3>HTML first proyect</h3></a>
     </li>
   </ol>
   </body>
