section formating tags finished

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <a href="HTMLBasics/whatIsHtml.html"><li>Html basics</li></a>
         <a href="HTMLBasics/htmlHistory.html"><li>Html history</li></a>
         <a href="HTMLBasics/basicHtml.html"><li>Basic html tags</li></a>
+        <a href="HTMLBasics/formatingTags.html"><li>Formating tags</li></a>
+        <a href="HTMLBasics/selectors.html"><li>Selectors: classes and ids</li></a>
       </ol>
     </li>
     <li>
