--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="HTMLBasics/basicHtml.html"><li>Basic html tags</li></a>
         <a href="HTMLBasics/formatingTags.html"><li>Formating tags</li></a>
         <a href="HTMLBasics/selectors.html"><li>Selectors: classes and ids</li></a>
+          <a href="HTMLBasics/basicHtml5Tags.html"><li>Basic Html 5 tags</li></a>
       </ol>
     </li>
     <li>
