--- a/HTMLBasics/basicHtml5Tags.html
+++ b/HTMLBasics/basicHtml5Tags.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+
+<body>
+  <p>this is and unorded list (not html5) also is how a navigation looks like before html5:</p>
+  <ul>
+    <li>Link 1</li>
+    <li>Link 1</li>
+    <li>Link 1</li>
+  </ul>
+  <p>in html5 we have a header tag, a nav tag, a section tag and a footer tag, what this tags do its divide your page in parts so you can make it more easy to read (also works for SEO),we can think of it like they were groups of items or blocks in the web page</p>
+  <header>
+
+  </header>
+  <p>this is a nav tag (html5):</p>
+  <nav>
+    <a href="#">Home/</a>
+    <a href="#">About/</a>
+  </nav>
+  <section>
+    <h1>section 1</h1>
+    <p>paragrahp 1</p>
+  </section>
+  <section>
+    <h1>section 2</h1>
+    <p>paragrahp 2</p>
+  </section>
+<footer> <p>this its just a footer</p> </footer>
+</body>
 </html>
