First proyect in course finished

--- a/HTMLFirstProyect/index.html
+++ b/HTMLFirstProyect/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>First Proyect HTML Structure</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 
 </head>
 </head>
@@ -14,13 +14,91 @@
   <header>
     <img id="logo" src="img/logo.png" alt="">
     <nav>
-        <a href="#">Home</a>
+      <a href="#">Home</a>
       <a href="#">Tech support</a>
       <a href="#">Courses</a>
       <a href="#">Premium plus</a>
       <a href="#">Contact</a>
     </nav>
   </header>
+  <section id="slideshow">
+    <section id="content">
+      <h1>Premium plus</h1>
+
+      <h3>Start Learning & improve your skills</h3>
+
+      <p>Sign up today for our free 1 month trial to our entire course library</p>
+
+      <button>Learn more</button>
+    </section>
+    <img src="img/background.jpg" alt="" id="slide">
+  </section>
+ <section id="courses">
+   <center><h1><h1>Our featured courses</h1></h1></center>
+  <div class="course">
+    <img src="img/course-01.jpg" alt="">
+    <center><h2>HTML5 For Beginners</h2></center>
+    <center><h6>This courses was designed for students starting out in Frontend devolopment</h6></center>
+    <center><button>Learn More</button></center>
+  </div>
+  <div class="course2">
+    <img src="img/course-02.jpg" alt="">
+    <center><h2>Css3 For Beginners</h2></center>
+    <center><h6>This courses was designed for students starting out in Frontend devolopment</h6></center>
+    <center><button>Learn More</button></center>
+  </div>
+  <div class="course3">
+    <img src="img/course-03.jpg" alt="">
+    <center><h2>Javascript For Beginners</h2></center>
+    <center><h6>This courses was designed for students starting out in Frontend devolopment</h6></center>
+    <center><button>Learn More</button></center>
+  </div>
+ </section>
+ <section id="about">
+   <div class="about">
+     <h1>About Learn Tech Plus</h1>
+   </div>
+   <div class="students">
+     <h1>750,000</h1>
+     <div class="reviews">
+       <h3>Reviews</h3>
+       <h1>20,000</h1>
+     </div>
+     <div class="courses">
+       <h1>198</h1>
+     </div>
+     <div class="content">
+       <h3>Hour of Content</h3>
+       <h1>300</h1>
+     </div>
+   </div>
+ </section>
+ <section id="learntech">
+    <center><h1 class="h1lt">Learn Tech</h1></center>
+    <div class="learntechnow">
+      <img src="img/learntechnow.jpg" alt="">
+      <center><h2>Learn Tech Now</h2></center>
+      <center><h6>Daily Video Series Covering Tech Topics</h6></center>
+      <center><button>Wacth Now</button></center>
+    </div>
+    <div class="learntechpodcast">
+      <img src="img/learntechpodcast.jpg" alt="">+
+      <center><h2>Learn Tech Podcast</h2></center>
+      <center><h6>Daily Podcast Series Covering Tech Topics</h6></center>
+      <center><button>Wacth Now</button></center>
+    </div>
+
+    <div class="learntechblog">
+      <img src="img/techtipsblog.jpg" alt="">+
+      <center><h2>Learn Tech Blog</h2></center>
+      <center><h6>Daily Blog Covering Tech Topics</h6></center>
+      <center><button>Wacth Now</button></center>
+    </div>
+    <footer>
+      <img id="logo"src="img/logo.png" alt="">
+      <p id="footer">Copyright 2019. All Rights Reserved | LearnTechPlus</p>
+    </footer>
+ </section>
 </body>
 
 </html>
