Section HTml5 advanced finished

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     <li>
       <a href="HTMLFirstProyect">  <h3>HTML first proyect</h3></a>
     </li>
+    <li>
+      <h3>HTML5 Advanced</h3>
+      <ol>
+        <a href="HTML5Advanced/htmlLayoutTags.html"><li>Html Layout Tags</li></a>
+            <a href="HTML5Advanced/html5FormattingTags.html"><li>Html5 Formatting Tags</li></a>
+              <a href="HTML5Advanced/html5MediaTags.html"><li>Html5 Media Tags</li></a>
+      </ol>
+    </li>
   </ol>
   </body>
 </html>
