update in the course¡¡¡

--- a/HTML5Advanced/htmlLayoutTags.html
+++ b/HTML5Advanced/htmlLayoutTags.html
@@ -13,19 +13,37 @@
     <nav>
       <h1>nav</h1>
     </nav>
+    <main>
+      <h1>main tag: </h1>
+      <p>a main tag is a tag specified  main content in a document</p>
+    </main>
     <h1>header</h1>
     <p>the header is use it to define the head, here comes menus and other elements that are relevant to the final user</p>
   </header>
   <p>also this tags are use it for semantic html or seo, for this specific proposite exist the following tags:</p>
+
   <article>
     <h1>article</h1>
     <p>this is an article, define a piece of text or a part of the website that contains information, before the article tag was created this was made it by using classes in divs which make it more messy and confuse</p>
+
     <aside>
       <h1>aside</h1>
       <p>this is writing in asiade tag, basically a tag make it for contain information relevant in an article</p>
     </aside>
 
+    <h1>Details tag:</h1>
+    <details open> <p>its a tag with a content that can be hide or show on demand, for this you have to give a attribute open (to manage when its vivible or not) if content its not visible you the open attribute disapear</p></details>
+    <h1>Dialog Tag:</h1>
+    <dialog open>its a dialog box or window</dialog>
+    <details><summary>
+      <h1>summary tag</h1>
+      <p>goes inside a details tag and define a visible heading for a detail element even when its no open</p>
+    </summary></details>
+    <h1>data tag</h1>
+    <p>adds a machine readable translation of a given content</p>
+    <data></data>
   </article>
+
   <footer>
     <p>this is a footer, its used to determinate the end of the page, also here are links to other pages or legal information</p>
   </footer>
