--- a/HTML5Advanced/htmlLayoutTags.html
+++ b/HTML5Advanced/htmlLayoutTags.html
@@ -41,7 +41,7 @@
     </summary></details>
     <h1>data tag</h1>
     <p>adds a machine readable translation of a given content</p>
-    <data></data>
+    <data value="213213">this is data</data>
   </article>
 
   <footer>
