--- a/index.html
+++ b/index.html
@@ -1,34 +1,61 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>Front End web devolopment</h1>
-    <ol>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+
+<body>
+  <h1>Front End web devolopment</h1>
+  <ol>
     <li>
       <h3>HTML basics</h3>
       <ol>
-        <a href="HTMLBasics/whatIsHtml.html"><li>Html basics</li></a>
-        <a href="HTMLBasics/htmlHistory.html"><li>Html history</li></a>
-        <a href="HTMLBasics/basicHtml.html"><li>Basic html tags</li></a>
-        <a href="HTMLBasics/formatingTags.html"><li>Formating tags</li></a>
-        <a href="HTMLBasics/selectors.html"><li>Selectors: classes and ids</li></a>
-          <a href="HTMLBasics/basicHtml5Tags.html"><li>Basic Html 5 tags</li></a>
+        <a href="HTMLBasics/whatIsHtml.html">
+          <li>Html basics</li>
+        </a>
+        <a href="HTMLBasics/htmlHistory.html">
+          <li>Html history</li>
+        </a>
+        <a href="HTMLBasics/basicHtml.html">
+          <li>Basic html tags</li>
+        </a>
+        <a href="HTMLBasics/formatingTags.html">
+          <li>Formating tags</li>
+        </a>
+        <a href="HTMLBasics/selectors.html">
+          <li>Selectors: classes and ids</li>
+        </a>
       </ol>
     </li>
     <li>
-      <a href="HTMLFirstProyect">  <h3>HTML first proyect</h3></a>
+      <a href="HTMLFirstProyect">
+        <h3>HTML first proyect</h3>
+      </a>
     </li>
     <li>
       <h3>HTML5 Advanced</h3>
       <ol>
-        <a href="HTML5Advanced/htmlLayoutTags.html"><li>Html Layout Tags</li></a>
-            <a href="HTML5Advanced/html5FormattingTags.html"><li>Html5 Formatting Tags</li></a>
-              <a href="HTML5Advanced/html5MediaTags.html"><li>Html5 Media Tags</li></a>
+        <a href="HTML5Advanced/basicHtml5Tags.html">
+          <li>Basic Html 5 tags</li>
+        </a>
+        <a href="HTML5Advanced/htmlLayoutTags.html">
+          <li>Html Layout Tags</li>
+        </a>
+        <a href="HTML5Advanced/html5FormattingTags.html">
+          <li>Html5 Formatting Tags</li>
+        </a>
+        <a href="HTML5Advanced/html5List.html">
+          <li>Html5 Type of Lists</li>
+        </a>
+        <a href="HTML5Advanced/html5MediaTags.html">
+          <li>Html5 Media Tags</li>
+        </a>
+
       </ol>
     </li>
   </ol>
-  </body>
+</body>
+
 </html>
