List and Images section finished

--- a/HTML5Advanced/html5List.html
+++ b/HTML5Advanced/html5List.html
@@ -9,4 +9,34 @@
 <body>
 
 </body>
+<h1>htmll list are divide in the following:</h1>
+<!-- <ul> define a unorder list(this doesnt aplicate any change in the list items)-->
+<ul>
+  <li>unorder Lists</li><br>
+  <p>its a list but this doesnt have any order between items</p>
+</ul>
+<!-- <ol> define a ordered list change the list items to numeric listed items-->
+<ol>
+  <li>order list</li>
+  <p>a list that organize the items with numbers, like the item before this p tag</p>
+</ol>
+<!-- <li> -->
+<p>inside a list you have list items which are defined by a tag and look like the followind</p>
+<li>This is a list item</li>
+<br>
+<!-- <dir> define a directory-->
+<dir>
+  <li>the directory list its not soported by html5 and its recommended use a ul instead</li>
+</dir>
+<!-- <dl> define a description list-->
+<dl class="">
+  <li>dl or description list</li>
+  <p></p>
+  <!-- <dt> Defines a term name in a description list-->
+  <dt>this is a dt tag and define a term name in a description list</dt>
+  <dt>this is a second term</dt>
+  <dd>this is a description for second term</dd>
+  <!-- <dd> Define a description at a term name in a description list-->
+  <dd>this is a description for a term in a description inside a dl</dd>
+</dl>
 </html>
