--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li>Basic Html 5 tags</li>
         </a>
         <a href="HTML5Advanced/htmlLayoutTags.html">
-          <li>Html Layout Tags</li>
+          <li>Html5  Layout Tags</li>
         </a>
         <a href="HTML5Advanced/html5FormattingTags.html">
           <li>Html5 Formatting Tags</li>
@@ -52,7 +52,9 @@
         <a href="HTML5Advanced/html5MediaTags.html">
           <li>Html5 Media Tags</li>
         </a>
-
+        <a href="HTML5Advanced/html5Images.html">
+          <li>Html5 Images</li>
+        </a>
       </ol>
     </li>
   </ol>
