--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
         <a href="HTML5Advanced/html5Images.html">
           <li>Html5 Images</li>
         </a>
+
+        <a href="HTML5Advanced/html5AudioAndVideoFormats.html">
+          <li>Html5 Audio and Video</li>
+        </a>
+
       </ol>
     </li>
   </ol>
