--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h3>HTML5 Advanced</h3>
       <ol>
         <a href="HTML5Advanced/basicHtml5Tags.html">
-          <li>Basic Html 5 tags</li>
+          <li>Html5 Basic tags</li>
         </a>
         <a href="HTML5Advanced/htmlLayoutTags.html">
           <li>Html5  Layout Tags</li>
@@ -61,6 +61,10 @@
         </a>
         <a href="HTML5Advanced/html5Forms.html">
           <li>Html5 Forms</li>
+        </a>
+
+        <a href="HTML5Advanced/html5Frames.html">
+          <li>Html5 Frames</li>
         </a>
       </ol>
     </li>
