--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         <a href="HTML5Advanced/html5Frames.html">
           <li>Html5 Frames</li>
         </a>
+
+        <a href="HTML5Advanced/html5Table.html">
+          <li>Html5 Tables</li>
+        </a>
       </ol>
     </li>
   </ol>
