test for github pages

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
         <a href="HTML5Advanced/html5Table.html">
           <li>Html5 Tables</li>
         </a>
+        <a href="HTML5Advanced/html5Script.html">
+          <li>Html5 Scripts</li>
+        </a>
       </ol>
     </li>
   </ol>
