end of html 5 section

--- a/HTML5Advanced/html5Script.html
+++ b/HTML5Advanced/html5Script.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Programming</title>
 </head>
+
 <body>
-  <script>
-    alert("hello");
+  <ol>
+    <li>
+      <h3>script tag</h3>
+      <p>defines a script, a scrip its a piece of code that makes the content of the page interactive, throught this we can send alerts or show information in console like the following= "hello :D"</p>
+    </li>
+    <li>
+      <h3>noscrip tag</h3>
+      <p>a noscrip define an alternative content for users that do not support client-side script</p>
+      <noscript>
+
+      </noscript>
+    </li>
+    <li>
+      <h3>applet tag</h3>
+      <p>the applet tag defines embedded applet and its not supported in html5</p>
+    </li>
+    <li>
+      <h3>embed tag</h3>
+      <p>the embed tag defines an embedded applet and its also not supported in html5</p>
+    </li>
+    <li>
+      <h3>object tag</h3>
+      <p>object tag defines an embedded object and its not supported for most of the browsers</p>
+    </li>
+    <li>
+      <h3>param tag</h3>
+      <p>defines a param for an object tag, also not supported in html5</p>
+    </li>
+  </ol>
+  <script type="text/javascript">
+  console.log("hello :D")
   </script>
 </body>
+
 </html>
